testCases/parserTestCases/correct/funDecTail.cs16
-- Carston Schilds, Feb 21st 2016

bool foo2(void){;}
int foo(void){;}
void main(void){;}