testCases/parserTestCases/error/continueStmt.cs16
-- Carston Schilds, Feb 21st 2016
void main(void){
    --omitting semi
    continue
}